# ComfyUI_HF_ModelDownloader

./: .editorconfig  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  __init__.py  pyproject.toml  requirements.txt  server.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
tests/: test_server.py
web/: hf_model_downloader.css  hf_model_downloader.js
