[project]
name = "hf_modeldownloader"
description = ""
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["# Runtime dependency used by the extension backend for Hugging Face API requests.", "aiohttp>=3.9,<4.0"]

[project.urls]
Repository = "https://github.com/babydjac/ComfyUI_HF_ModelDownloader"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/babydjac/ComfyUI_HF_ModelDownloader/wiki"
"Bug Tracker" = "https://github.com/babydjac/ComfyUI_HF_ModelDownloader/issues"

[tool.comfy]
PublisherId = "babydjac"
DisplayName = "ComfyUI_HF_ModelDownloader"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

